fix(DAB-16): make back link focusable with correct cursor

--- a/src/app/signing-video/sign-language.component.scss
+++ b/src/app/signing-video/sign-language.component.scss
@@ -22,3 +22,9 @@ youtube-player {
 img.back-btn {
   width: 1rem;
 }
+
+a.back-link {
+  width: fit-content;
+  display: flex;
+  align-items: center;
+}
