fix: add focus outline to mobile

--- a/src/app/poll/mobile-poll-table.component.html
+++ b/src/app/poll/mobile-poll-table.component.html
@@ -44,7 +44,7 @@
           <div class="col-auto px-1">
             <!-- button to delete the currently edited participant -->
             <button (click)="formHelper.deleteEditParticipant(getSelectedParticipant())"
-                    class="btn btn-transparent p-0 border-0"
+                    class="btn btn-trash btn-transparent p-0 border-0"
                     type="button">
               <img alt="trashcan" class="icon icon-delete" src="assets/trash.svg"/>
             </button>
