fix: vertically center text

--- a/src/app/links/links.component.html
+++ b/src/app/links/links.component.html
@@ -35,7 +35,7 @@
               {{ absoluteAppointmentLink }}
             </div>
           </div>
-          <div class="col-12 d-flex justify-content-end">
+          <div class="col-12 d-flex justify-content-end align-items-center">
             <button
               (click)="createPollMail()"
               class="btn btn-transparent text-primary"
@@ -93,7 +93,7 @@
               {{ absoluteAdminLink }}
             </div>
           </div>
-          <div class="col-12 d-flex justify-content-end">
+          <div class="col-12 d-flex justify-content-end align-items-center">
             <button
               (click)="createAdminMail()"
               class="btn btn-transparent text-primary"
