fix: remove unnecessary padding

--- a/src/app/poll/mobile-poll-table.component.html
+++ b/src/app/poll/mobile-poll-table.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container px-0">
   @if (formHelper.pollForm && formHelper.appointment) {
     <div [formGroup]="formHelper.pollForm"
          class="row g-0 toolbar d-lg-none p-1 invalid-message-highlight">
