chore: change color and thickness
This still respects a contrast-ratio of >3:1. The previous version may
be great for visibility, but looks distracting for non-impaired users.

--- a/src/default.scss
+++ b/src/default.scss
@@ -101,6 +101,6 @@ $container-max-widths: (
   outline: none;
 
   &:focus {
-    outline: darken($primary, 50%) solid 3px !important;
+    outline: lighten($primary, 10%) solid 2px !important;
   }
 }
