chore: increase outline-width to default bootstrap box-shadow-width

--- a/src/default.scss
+++ b/src/default.scss
@@ -101,6 +101,6 @@ $container-max-widths: (
   outline: none;
 
   &:focus {
-    outline: lighten($primary, 10%) solid 2px !important;
+    outline: lighten($primary, 10%) solid 0.25rem !important;
   }
 }
