--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -52,6 +52,7 @@
                 class="invalid-message"
                 data-id="msgRequiredTitle"
               >
+                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                 {{ 'poll.title.noTitle' | translate }}
               </div>
             }
@@ -61,6 +62,7 @@
                 data-id="msgInvalidTitle"
                 id="invalid-title"
               >
+                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                 {{ 'poll.title.invalid' | translate }}
               </div>
             }
@@ -69,6 +71,7 @@
                 class="invalid-message"
                 data-id="msgLongTitle"
               >
+                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                 {{ 'poll.title.tooLong' | translate }}
               </div>
             }
