--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -171,6 +171,7 @@
                               class="invalid-message ml-2"
                               data-id="noNameMsg"
                             >
+                              <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                               {{ 'poll.details.name.noName' | translate }}
                             </div>
                           }
@@ -180,6 +181,7 @@
                               data-id="nameInvalidMsg"
                               id="invalid-add-name"
                             >
+                              <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                               {{ 'poll.details.name.invalid' | translate }}
                             </div>
                           }
@@ -188,6 +190,7 @@
                               class="invalid-message"
                               data-id="tooLongMsg"
                             >
+                              <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                               {{ 'poll.details.name.tooLong' | translate }}
                             </div>
                           }
@@ -294,6 +297,7 @@
                             && !!formHelper.getParticipantFormName().errors?.required) {
                               <div
                                 class="invalid-message">
+                                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                                 {{ 'poll.details.name.noName' | translate }}
                               </div>
                             }
@@ -302,6 +306,7 @@
                                 class="invalid-message"
                                 id="invalid-edit-name"
                               >
+                                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                                 {{ 'poll.details.name.invalid' | translate }}
                               </div>
                             }
@@ -309,6 +314,7 @@
                               <div
                                 class="invalid-message"
                               >
+                                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                                 {{ 'poll.details.name.tooLong' | translate }}
                               </div>
                             }
