--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -55,6 +55,7 @@
                 class="offset-1 col invalid-message"
                 data-id="errorMsgSetPassword"
               >
+                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                 {{ 'password.set' | translate }}
               </div>
             }
@@ -63,6 +64,7 @@
                 class="offset-1 col invalid-message"
                 data-id="errorMsgSetMinimum"
               >
+                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                 {{ 'password.setMinimum' | translate }}
               </div>
             }
@@ -100,6 +102,7 @@
                   class="col invalid-message"
                   data-id="errorMsgNoMatch"
                 >
+                  <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'password.noMatch' | translate }}
                 </div>
               }
