--- a/src/app/create-appointment/create-appointment.component.html
+++ b/src/app/create-appointment/create-appointment.component.html
@@ -36,6 +36,7 @@
                   data-id="msgRequiredTitle"
                   id="required-title"
                 >
+                  <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.title.noTitle' | translate }}
                 </div>
               }
@@ -45,6 +46,7 @@
                   data-id="msgInvalidTitle"
                   id="invalid-title"
                 >
+                  <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.title.invalid' | translate }}
                 </div>
               }
@@ -54,6 +56,7 @@
                   data-id="msgLongTitle"
                   id="maxLength-title"
                 >
+                  <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.title.tooLong' | translate }}
                 </div>
               }
@@ -83,6 +86,7 @@
                   class="invalid-message"
                   data-id="msgRequiredName"
                 >
+                  <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.details.name.noName' | translate }}
                 </div>
               }
@@ -92,6 +96,7 @@
                   data-id="msgInvalidName"
                   id="invalid-name"
                 >
+                  <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.details.name.invalid' | translate }}
                 </div>
               }
@@ -100,6 +105,7 @@
                   class="invalid-message"
                   data-id="msgLongName"
                 >
+                  <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.details.name.tooLong' | translate }}
                 </div>
               }
@@ -128,6 +134,7 @@
                   data-id="msgInvalidLocation"
                   id="invalid-location"
                 >
+                  <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.details.place.invalid' | translate }}
                 </div>
               }
@@ -137,6 +144,7 @@
                   data-id="msgLongLocation"
                   id="maxLength-location"
                 >
+                  <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.details.place.tooLong' | translate }}
                 </div>
               }
@@ -171,6 +179,7 @@
                   data-id="msgLongDescription"
                   id="maxLength-description"
                 >
+                  <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.details.description.tooLong' | translate }}
                 </div>
               }
