--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -56,6 +56,7 @@
             class="invalid-message"
             data-id="msgInvalid"
           >
+            <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
             {{ 'password.invalid' | translate }}
           </div>
         }
