--- a/src/app/shared/components/tos/tos.component.html
+++ b/src/app/shared/components/tos/tos.component.html
@@ -14,4 +14,5 @@
       {{ 'tos.accept' | translate }}
     </div>
   }
+        <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
 </div>
