feat: add visual indicator for invalid form elements
- highlight doesn't rely on colors
- in favor of better control which container shows the indicator, a new
 class `invalid-message-highlight` is introduced. The first iteration
 was tried on complex css rules, this turned out to be worsening with
 each new page that got edited in.
- input errors on timepickers get an additional class
`has-error-highlight`

--- a/src/app/create-appointment/create-appointment.component.html
+++ b/src/app/create-appointment/create-appointment.component.html
@@ -26,7 +26,7 @@
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
               <img alt="key" class="icon m-2 mt-3 mt-lg-4" src="assets/title.svg">
             </div>
-            <div class="col">
+            <div class="col invalid-message-highlight">
               <label data-id="titleLabel" for="title">{{ 'poll.title.placeholder' | translate }}</label>
               <input class="form-control" data-id="titleInput" formControlName="title" id="title"
                      placeholder="{{ 'poll.title.title' | translate }}" type="text">
@@ -69,7 +69,7 @@
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
               <img alt="key" class="icon m-2 mt-3 mt-lg-4" src="assets/user.svg">
             </div>
-            <div class="col">
+            <div class="col invalid-message-highlight">
               <label data-id="nameLabel" for="name">{{ 'poll.details.name.yourName' | translate }}</label>
               <input
                 appAutoFocus
@@ -118,7 +118,7 @@
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
               <img alt="Ort" class="icon m-2 mt-3 mt-lg-4" src="assets/location.svg">
             </div>
-            <div class="col">
+            <div class="col invalid-message-highlight">
               <label data-id="locationLabel" for="location">{{ 'poll.details.place.placeOptional' | translate }}</label>
               <input
                 class="form-control"
@@ -157,7 +157,7 @@
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
               <img alt="Sprechblase" class="icon m-2 mt-3 mt-lg-4" src="assets/description.svg">
             </div>
-            <div class="col">
+            <div class="col invalid-message-highlight">
               <label
                 data-id="descriptionLabel"
                 for="description"
