--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,7 +38,7 @@
           <label class="col" data-id="createPollLabel" for="title">{{ 'poll.title.set' | translate }}</label>
         </div>
         <div class="form-row mb-2">
-          <div class="col">
+          <div class="col invalid-message-highlight">
             <input
               class="form-control"
               data-id="createPollInput"
