--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -27,7 +27,7 @@
       </div>
     </div>
     <div class="d-flex form-row justify-content-center mt-3">
-      <div class="col col-lg-8">
+      <div class="col col-lg-8 invalid-message-highlight">
         <input
           aria-hidden="true"
           autocomplete="off"
