refactor: rename to proper grammar

--- a/src/app/create-suggested-dates/create-suggested-dates.component.html
+++ b/src/app/create-suggested-dates/create-suggested-dates.component.html
@@ -541,7 +541,7 @@
           @if (!!getSuggestedDatesFromForm().errors?.invalidMaxLengthArray) {
             <div class="invalid-message">
               <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-              {{ 'date.tooMuchValues' | translate }}
+              {{ 'date.tooManyValues' | translate }}
             </div>
           }
         </div>
