refactor: improve border position on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -83,8 +83,14 @@ label {
     left: .25rem;
   }
 
-  &:not(.form-group)::before {
+  &.invalid-message-highlight:not(.form-group)::before {
     left: -.5rem;
+  }
+
+  @media (max-width: map-get($grid-breakpoints, lg)) {
+    &::before {
+      left: -.15rem;
+    }
   }
 }
 
