feat: use primary color for back-navigation

--- a/src/app/shared/components/navigation/navigation.component.html
+++ b/src/app/shared/components/navigation/navigation.component.html
@@ -3,7 +3,7 @@
     <div class="col">
       <button
         (click)="onBack()"
-        class="btn btn-secondary btn-with-image btn-back w-100"
+        class="btn btn-primary btn-with-image btn-back w-100"
         data-id="back"
         id="back"
         type="button"
