fix: add missing outlines & give button outline an offset

--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -81,7 +81,7 @@
             <div class="col">
               <div class="row">
                 <div class="col col-12">
-                  <a class="w-100" data-id="changePollLink" routerLink="/poll-admin">
+                  <a class="w-100 d-inline-block" data-id="changePollLink" routerLink="/poll-admin">
                     <img alt="Stift" class="icon" id="img_edit" src="assets/dashboard_edit.svg">
                     <span
                       class="d-block font-medium text-bold"
