refactor: language select button
Now acts the same as other buttons:
- doesn't change color on hover/focus
- uses same outline

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -126,6 +126,10 @@ a {
   outline-offset: .25rem;
 }
 
+.btn.outline-primary {
+  border-color: $primary;
+}
+
 .section-container {
   background-color: white;
   border-radius: $border-radius;
