--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -141,6 +141,7 @@
                           class="col-10 form-group">
                           <label class="sr-only" for="name-add">{{ 'poll.details.name.name' | translate }}</label>
                           <input
+                            required
                             appAutoFocus
                             class="form-control ml-2 name-add"
                             data-id="nameInput"
@@ -276,6 +277,7 @@
                               {{ 'poll.details.name.name' | translate }}
                             </label>
                             <input
+                              required
                               class="form-control ml-2"
                               data-id="nameEditInput"
                               formControlName="name"
