--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -42,6 +42,7 @@
               <img alt="key" class="icon m-2" src="assets/password.svg">
             </div>
             <input
+              required
               [placeholder]="showPlaceholder ? '********' : ''"
               autocomplete="new-password"
               class="px-0 slim-input col-11"
@@ -87,6 +88,7 @@
               <img alt="key" class="icon m-2" src="assets/password.svg">
             </div>
             <input
+              required
               [placeholder]="showPlaceholder ? '********' : ''"
               autocomplete="new-password"
               class="px-0 slim-input col-11"
