--- a/src/app/shared/components/poll-options/poll-options.component.html
+++ b/src/app/shared/components/poll-options/poll-options.component.html
@@ -23,6 +23,7 @@
         <div class="w-100"></div>
         <div class="col-auto">
           <input
+            required
             class="status-declined"
             formControlName="status"
             id="{{getPrefix()}}-voting-status-declined-{{selectorId}}"
