--- a/src/app/create-appointment/create-appointment.component.html
+++ b/src/app/create-appointment/create-appointment.component.html
@@ -28,9 +28,14 @@
             </div>
             <div class="col invalid-message-highlight">
               <label data-id="titleLabel" for="title">{{ 'poll.title.placeholder' | translate }}</label>
-              <input class="form-control" data-id="titleInput" formControlName="title" id="title"
-                     placeholder="{{ 'poll.title.title' | translate }}" type="text"
-                     aria-describedby="required-title invalid-title maxLength-title">
+              <input
+                required
+                class="form-control"
+                data-id="titleInput"
+                formControlName="title" id="title"
+                placeholder="{{ 'poll.title.title' | translate }}"
+                type="text"
+                aria-describedby="required-title invalid-title maxLength-title">
               @if ((title.dirty || title.touched) && !!title.errors?.required) {
                 <div
                   class="invalid-message"
@@ -73,13 +78,13 @@
             <div class="col invalid-message-highlight">
               <label data-id="nameLabel" for="name">{{ 'poll.details.name.yourName' | translate }}</label>
               <input
+                required
                 appAutoFocus
                 class="form-control"
                 data-id="nameInput"
                 formControlName="name"
                 id="name"
                 placeholder="{{ 'poll.details.name.name' | translate }}"
-                required
                 type="text"
                 aria-describedby="required-name invalid-name long-name"
               >
