--- a/src/app/shared/components/tos/tos.component.html
+++ b/src/app/shared/components/tos/tos.component.html
@@ -1,6 +1,6 @@
 <div class="form-row invalid-message-highlight">
   <div class="col section-container py-2 px-3">
-    <app-checkbox-field [formControl]="isTosRead" [labelTemplate]="tosLabelTemplate" ariaDescribedBy="tos-accept"/>
+    <app-checkbox-field [formControl]="isTosRead" [labelTemplate]="tosLabelTemplate" ariaDescribedBy="tos-accept" [required]="'required'"/>
 
     <ng-template #tosLabelTemplate>
       {{ 'tos.accept_0' | translate }}
