feat: prevent illegal characters in time input

--- a/src/app/create-suggested-dates/create-suggested-dates.component.html
+++ b/src/app/create-suggested-dates/create-suggested-dates.component.html
@@ -260,6 +260,7 @@
                         <!--suppress XmlDuplicatedId these duplicate ids  will never appear on the page at the same time-->
                         <input
                           class="form-control"
+                          appTimeInput
                           data-id="startTimeInput"
                           formControlName="startTime"
                           id="suggested-date-start-time-{{i}}"
@@ -313,6 +314,7 @@
                         <!--suppress XmlDuplicatedId these duplicate ids  will never appear on the page at the same time-->
                         <input
                           class="form-control"
+                          appTimeInput
                           data-id="endTimeInput"
                           formControlName="startDateEndTime"
                           id="suggested-date-end-time-{{i}}"
@@ -415,6 +417,7 @@
                         <!--suppress XmlDuplicatedId these duplicate ids  will never appear on the page at the same time-->
                         <input
                           class="form-control"
+                          appTimeInput
                           data-id="startTimeInputSecondColumn"
                           formControlName="startTime"
                           id="suggested-date-start-time-{{i}}"
@@ -469,6 +472,7 @@
                         <!--suppress XmlDuplicatedId these duplicate ids  will never appear on the page at the same time-->
                         <input
                           class="form-control"
+                          appTimeInput
                           data-id="endTimeInputSecondColumn"
                           formControlName="endDateEndTime"
                           id="suggested-date-end-time-different-day-{{i}}"
