refactor: darken `$medium-gray` for better contrast

--- a/src/default.scss
+++ b/src/default.scss
@@ -2,7 +2,7 @@ $derivate: 'default';
 $primary: #003064;
 $secondary: #d4004b;
 $light-gray: #F5F6F7;
-$medium-gray: #A4ADB6;
+$medium-gray: #909498;
 $dark-gray: #666666;
 $s-h-blue: $primary;
 $s-h-blue-50: #8497af;
