fix: visual focus for back button

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -148,7 +148,8 @@ a,
   @include focus-outline;
 }
 
-.btn-secondary:focus {
+.btn-secondary:focus,
+.btn-primary:focus {
   box-shadow: none !important;
   outline: .25rem solid $primary !important;
   outline-offset: .25rem;
