fix: use `h1` for content instead of title
- `h2` -> `h1`
- `h3` -> `h2`
- update font-sizes to mimic previous look

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,9 @@
       <span class="sr-only">{{ 'header.home' | translate }}</span>
       <img alt="Logo" data-id="headerLogo" id="logo" ngSrc="assets/logo.svg" height="height" width="width">
     </a>
-    <h1 class="col header-title" data-id="headerTitle">
+    <div class="col header-title h1" data-id="headerTitle">
       {{ headlineHome }}
-    </h1>
+    </div>
     <nav class="col-2 col-md-3" [attr.aria-label]="'header.navLabel' | translate">
       <ul class="d-flex flex-row flex-wrap list-unstyled justify-content-end align-items-baseline gap-1 mb-0">
         <li>
