refactor: use `p` instead of heading

--- a/src/app/links/links.component.html
+++ b/src/app/links/links.component.html
@@ -3,10 +3,10 @@
     <div class="row justify-content-center mt-4 mb-0">
       <div class="col text-center">
         <h1 class="text-primary">{{ 'links.done' | translate }}</h1>
-        <h2 class="text-center font-medium text-bold" data-id="linksHeading">
+        <p class="text-center font-medium text-bold mb-2" data-id="linksHeading">
           {{ 'links.share' | translate }}
-        </h2>
-        <h3 data-id="appointmentTitle">{{ model.title }}</h3>
+        </p>
+        <p class="mb-2" data-id="appointmentTitle">{{ model.title }}</p>
       </div>
     </div>
     <div class="row mt-4">
