refactor: disabled attribute to aria-disabled
Elements can now be focused while being disabled.
Assistive tech can act on the elements' status.

- rename `invalid` to `isInvalid` to better reflect its type

--- a/src/app/create-appointment/create-appointment.component.html
+++ b/src/app/create-appointment/create-appointment.component.html
@@ -203,7 +203,7 @@
       (forward)="onSubmit()"
       [hasBackwardButton]="false"
       [hasForwardButton]="true"
-      [invalid]="detailsForm.invalid"
+      [isInvalid]="detailsForm.invalid"
       data-id="navigationComponent"
       forwardText="{{ 'navigation.nextToDateSelection' | translate }}"
     ></app-navigation>
