--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -55,7 +55,8 @@
           <div class="col pt-3">
             @if (!isAdmin) {
               <button
-                [disabled]="passwordForm.invalid"
+                [attr.aria-disabled]="passwordForm.invalid"
+                [ngClass]="{'disabled': passwordForm.invalid}"
                 class="btn btn-secondary btn-submit w-100"
                 data-id="userButton"
                 type="submit"
@@ -70,7 +71,8 @@
             }
             @if (isAdmin) {
               <button
-                [disabled]="passwordForm.invalid"
+                [attr.aria-disabled]="passwordForm.invalid"
+                [ngClass]="{'disabled': passwordForm.invalid}"
                 class="btn btn-secondary btn-submit w-100"
                 data-id="adminButton"
                 type="submit"
