--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -121,7 +121,7 @@
         (forward)="onSubmit()"
         [hasBackwardButton]="true"
         [hasForwardButton]="true"
-        [invalid]="settingsForm.invalid"
+        [isInvalid]="settingsForm.invalid"
         backwardText="{{ 'navigation.back' | translate }}"
         forwardText="{{ 'navigation.next' | translate }}"
       ></app-navigation>
