refactor: remove alt text
Screen readers read the same text twice in a row.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -80,8 +80,7 @@
             >
               <span class="icon-create-poll"></span>
               {{ 'poll.create' | translate }}
-              <img alt="{{ 'poll.create' | translate }}" class="icon-create-poll"
-                   src="assets/icn_umfrage_erstellen.svg">
+              <img alt="" class="icon-create-poll" src="assets/icn_umfrage_erstellen.svg">
             </button>
           </div>
         </div>
