--- a/src/app/shared/components/admin-info/admin-info.component.html
+++ b/src/app/shared/components/admin-info/admin-info.component.html
@@ -1,5 +1,5 @@
 <div class="row mb-2">
-  <div class="col text-center font-small text-bold px-2 px-sm-0">
+  <div class="col text-center font-small text-bold px-2 px-sm-0" role="alert">
     {{ 'poll.editAlert' | translate }} <br class="d-xl-none">{{ 'poll.editSaveLastStep' | translate }}
   </div>
 </div>
