--- a/src/app/shared/components/message-box/message-box.component.html
+++ b/src/app/shared/components/message-box/message-box.component.html
@@ -1,6 +1,7 @@
 <div
   [ngClass]="{'alert-success': isSuccess, 'alert-info': isInfo, 'alert-warning': isWarning, 'alert-danger': isError}"
   class="alert"
+  role="alert"
 >
   {{_message.message}}
 </div>
